kubernetes/apps/default/dozzle/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dozzle-internal
  namespace: default
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - logs.${SECRET_DOMAIN}
  rules:
    - backendRefs:
      - name: dozzle-service
        port: 8080
